plugins {
	id 'java'
	id 'org.springframework.boot' version '3.1.1'
	id 'io.spring.dependency-management' version '1.1.0'
}


jar {
	enabled = false
}

group = 'com'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.0.4'
	implementation 'org.springframework.boot:spring-boot-starter-security:3.0.4'
	implementation 'org.springframework.boot:spring-boot-starter-validation:3.0.4'
	implementation 'org.springframework.boot:spring-boot-starter-web:3.1.0'
	implementation 'org.jsoup:jsoup:1.15.4'
	implementation 'org.slf4j:slf4j-api:2.0.7'
	implementation 'ch.qos.logback:logback-classic:1.4.7'

	implementation 'org.springframework.boot:spring-boot-starter-websocket:3.0.4'

	compileOnly 'org.projectlombok:lombok:1.18.26'
	developmentOnly 'org.springframework.boot:spring-boot-devtools:3.0.4'
	implementation 'com.theokanning.openai-gpt3-java:service:0.14.0'
	runtimeOnly 'com.h2database:h2:2.1.214'
	runtimeOnly 'com.mysql:mysql-connector-j:8.0.32'
	annotationProcessor 'org.projectlombok:lombok:1.18.26'
	testImplementation 'org.springframework.boot:spring-boot-starter-test:3.1.0'
	testImplementation 'org.springframework.security:spring-security-test:6.0.2'
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5' // or 'io.jsonwebtoken:jjwt-gson:JJWT_RELEASE_VERSION' for gson
}

tasks.named('test') {
	useJUnitPlatform()
}
